corrected scrollbar problem chrome

--- a/style.css
+++ b/style.css
@@ -18,11 +18,15 @@ body {
 }
 .graphic { grid-area: graphic; }
 
+* {
+  box-sizing: border-box;
+}
+
 /* Grid Container*/
 .grid-container {
   display: grid;
-  height: 95.9%;
-  width: 98%;
+  height: 100%;
+  width: 100%;
   padding: 1%;
   grid-gap: 1% 0.5%;
   grid-template-columns: minmax(150px, 200px) minmax(200px, 95%);
@@ -110,7 +114,7 @@ p{
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
-  height: 46px;
+  height: 52px;
 }
 
 p.lab{
